progress on home page

--- a/filmaniac/src/styles/home.css
+++ b/filmaniac/src/styles/home.css
@@ -1,7 +1,8 @@
 .jumbotron {
-  background-color: #343a40 !important;
+  /* background-color: #343a40 !important; */
   height: 50vh;
   color: white;
+  background-image: src('../assets/bg-image.jpg');
 }
 
 .jumbotron input {
