--- a/filmaniac/src/styles/mynavbar.css
+++ b/filmaniac/src/styles/mynavbar.css
@@ -3,3 +3,12 @@
   width: 40px;
   height: 40px;
 }
+
+.nav-item a {
+  color: white;
+  border: 1px solid white;
+  border-radius: 5px;
+}
+.dropdown-menu a {
+  color: black;
+}
