--- a/filmaniac/src/styles/mynavbar.css
+++ b/filmaniac/src/styles/mynavbar.css
@@ -1,14 +1,27 @@
-.acount-icon {
-  color: white;
-  width: 40px;
-  height: 40px;
+.navbar {
+  background-color: rgb(5, 5, 5) !important;
 }
 
-.nav-item a {
+.acount-icon {
+  color: white;
+  width: 35px;
+  height: 35px;
+}
+
+.navbar-nav a {
+  color: white;
+}
+
+/* .nav-item a {
   color: white;
   border: 1px solid white;
   border-radius: 5px;
-}
+} */
+
 .dropdown-menu a {
   color: black;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: white;
 }
