--- a/filmaniac/src/styles/mynavbar.css
+++ b/filmaniac/src/styles/mynavbar.css
@@ -25,3 +25,7 @@
 .navbar-light .navbar-nav .nav-link {
   color: white;
 }
+.navbar-light .navbar-nav .nav-link:hover {
+  color: white;
+  text-decoration: underline;
+}
