--- a/filmaniac/src/styles/mynavbar.css
+++ b/filmaniac/src/styles/mynavbar.css
@@ -24,6 +24,7 @@
 
 .navbar-light .navbar-nav .nav-link {
   color: white;
+  /* transition: text-decoration 1s; */
 }
 .navbar-light .navbar-nav .nav-link:hover {
   color: white;
