--- a/filmaniac/src/styles/mynavbar.css
+++ b/filmaniac/src/styles/mynavbar.css
@@ -10,6 +10,7 @@
 
 .navbar-nav a {
   color: white;
+  margin-right: 1rem;
 }
 
 /* .nav-item a {
@@ -28,5 +29,5 @@
 }
 .navbar-light .navbar-nav .nav-link:hover {
   color: white;
-  text-decoration: underline;
+  text-decoration: underline 3px #ffc007;
 }
