--- a/filmaniac/src/styles/movieRow.css
+++ b/filmaniac/src/styles/movieRow.css
@@ -14,3 +14,9 @@
 .movie-col img:hover {
   transform: scale(1.1);
 }
+
+.modal-image {
+  width: 200px;
+  height: 300px;
+  object-fit: contain;
+}
