adds navbar movie list

--- a/filmaniac/src/styles/movieRow.css
+++ b/filmaniac/src/styles/movieRow.css
@@ -7,10 +7,11 @@
 
 .movie-col img {
   width: 100%;
+  height: 100%;
 }
 
 .movie-col img {
-  transition: transform 0.2s;
+  transition: transform 0.1s;
 }
 
 .movie-col img:hover {
