--- a/filmaniac/src/styles/movieRow.css
+++ b/filmaniac/src/styles/movieRow.css
@@ -34,3 +34,35 @@
   margin-top: 0.1em;
   color: #ffc107;
 }
+
+.play-icon {
+  font-size: 1.5em;
+}
+
+.genre-list {
+  font-size: 0.8em;
+  border: 1px solid white;
+  border-radius: 20px;
+}
+
+.genre-div {
+  justify-content: space-evenly;
+}
+
+.play-div {
+  background-color: #272727;
+  border-radius: 5px;
+  width: 150px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+hr {
+  background-color: white;
+  margin-top: 0%;
+  /* margin-bottom: 0%; */
+}
+
+.badge {
+  font-size: 1em;
+}
