--- a/filmaniac/src/styles/movieRow.css
+++ b/filmaniac/src/styles/movieRow.css
@@ -19,7 +19,7 @@
 }
 
 .modal-image {
-  width: 200px;
+  width: 100%;
   height: 300px;
   object-fit: contain;
 }
@@ -31,7 +31,7 @@
 
 .heart-icon {
   font-size: 1.7em;
-  margin-top: 0.1em;
+  margin-top: 0.2em;
   color: #ffc107;
 }
 
@@ -58,11 +58,15 @@
 }
 
 hr {
-  background-color: white;
+  background-color: rgb(158, 158, 158);
   margin-top: 0%;
   /* margin-bottom: 0%; */
 }
 
 .badge {
   font-size: 1em;
+}
+
+.award-p {
+  font-size: 1.1em;
 }
