--- a/filmaniac/src/styles/movieRow.css
+++ b/filmaniac/src/styles/movieRow.css
@@ -112,3 +112,8 @@ hr {
   width: 30px !important;
   height: 30px !important;
 }
+
+.modal-actor-image {
+  object-fit: cover;
+  object-position: top;
+}
