--- a/filmaniac/src/styles/personDetail.css
+++ b/filmaniac/src/styles/personDetail.css
@@ -1,7 +1,13 @@
 .person-detail-container {
   padding-top: 7em !important;
-  padding-left: 20em !important;
   padding-right: 20em !important;
+  padding-bottom: 6em !important;
+  padding-left: 20em !important;
+  background: linear-gradient(
+    180deg,
+    rgba(26, 26, 26, 1) 0%,
+    rgba(5, 5, 5, 1) 100%
+  );
 }
 
 span {
@@ -15,4 +21,27 @@ span {
 .person-image {
   object-fit: cover;
   object-position: top;
+  width: 200px;
+  height: 300px;
+}
+
+.person-detail-movie-image {
+  object-fit: cover;
+  object-position: top;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.1s;
+}
+
+.person-detail-movie-image:hover {
+  transform: scale(1.1);
+}
+
+.person-detail-row {
+  background-color: #050505;
+  border-radius: 5px;
+}
+
+.description {
+  color: rgb(199, 199, 199);
 }
