--- a/filmaniac/src/styles/mynavbar.css
+++ b/filmaniac/src/styles/mynavbar.css
@@ -28,11 +28,14 @@
   color: black;
 }
 
-.navbar-light .navbar-nav .nav-link {
+.navbar-dark .navbar-nav .nav-link {
   color: white;
   /* transition: text-decoration 1s; */
 }
-.navbar-light .navbar-nav .nav-link:hover {
+.navbar-dark .navbar-nav .nav-link:hover {
   color: white;
   text-decoration: underline 3px #ffc007;
+}
+.navbar-dark .navbar-toggler {
+  border-color: rgba(255, 255, 255, 0.5);
 }
