--- a/filmaniac/src/styles/movieRow.css
+++ b/filmaniac/src/styles/movieRow.css
@@ -5,6 +5,11 @@
   padding-right: 3em;
 }
 
+.movie-col {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .movie-col img {
   width: 100%;
   height: 100%;
@@ -126,9 +131,15 @@ hr {
   margin-left: 1.5em;
 }
 
+.star-row {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
 @media screen and (max-width: 463px) {
   .movie-col {
-    background-color: pink;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
   .modal-movietitle {
@@ -166,7 +177,8 @@ hr {
 }
 @media screen and (max-width: 1024px) and (min-width: 464px) {
   .movie-col {
-    background-color: grey;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
   .modal-movietitle {
