--- a/filmaniac/src/styles/personDetail.css
+++ b/filmaniac/src/styles/personDetail.css
@@ -1,8 +1,8 @@
 .person-detail-container {
   padding-top: 7em !important;
-  padding-right: 20em !important;
+  padding-right: 17em !important;
   padding-bottom: 6em !important;
-  padding-left: 20em !important;
+  padding-left: 17em !important;
   background: linear-gradient(
     180deg,
     rgba(26, 26, 26, 1) 0%,
@@ -44,4 +44,63 @@ span {
 
 .description {
   color: rgb(199, 199, 199);
+}
+
+.heart-icon {
+  font-size: 1.3em;
+  margin-top: 0.4em;
+  color: #ffc107;
+}
+
+.known-for-col {
+  height: 100%;
+}
+
+.person-info-div {
+  margin-right: 3em;
+}
+
+@media screen and (max-width: 651px) {
+  .description {
+    display: none;
+  }
+  .person-detail-container {
+    padding-right: 2em !important;
+    padding-left: 2em !important;
+  }
+  .person-detail-row h3 {
+    font-size: 1.2em;
+  }
+  .person-detail-row h5 {
+    font-size: 1em;
+  }
+  .person-detail-row p {
+    font-size: 0.8em;
+  }
+  .person-info-div {
+    margin-right: 1em;
+  }
+}
+
+@media screen and (max-width: 899px) and (min-width: 650px) {
+  .person-detail-container {
+    padding-right: 5em !important;
+    padding-left: 5em !important;
+  }
+  .person-info-div {
+    margin-right: 1em;
+  }
+}
+
+@media screen and (max-width: 1150px) and (min-width: 900px) {
+  .person-detail-container {
+    padding-right: 10em !important;
+    padding-left: 10em !important;
+  }
+  .known-for-col h5 {
+    font-size: 1em;
+  }
+  .person-info-div {
+    margin-right: 1em;
+  }
 }
