--- a/filmaniac/src/styles/personDetail.css
+++ b/filmaniac/src/styles/personDetail.css
@@ -46,7 +46,7 @@ span {
   color: rgb(199, 199, 199);
 }
 
-.heart-icon {
+.person-heart-icon {
   font-size: 1.3em;
   margin-top: 0.4em;
   color: #ffc107;
